crates/panache-parser/tests/snapshots/yaml__yaml_suite_Y79Y__002.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: Y79Y/002
input: "- [\n\t\n foo\n ]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
