crates/panache-parser/tests/snapshots/yaml__yaml_suite_Y79Y__010.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: Y79Y/010
input: "-\t-1\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
